# orderbook

./: .gitignore  Cargo.toml  README.md  orderbook_valerii.bundle
orderbook-client/: Cargo.toml
orderbook-client/src/: main.rs
orderbook-common/: Cargo.toml
orderbook-common/src/: lib.rs
orderbook-engine/: Cargo.toml
orderbook-engine/examples/: simple.rs
orderbook-engine/src/: book.rs  level.rs  lib.rs  main.rs  market.rs  matcher.rs  order.rs  trade.rs
orderbook-engine/src/matcher/: fifo.rs
orderbook-server/: Cargo.toml
orderbook-server/src/: main.rs  server.rs
